# f1twtbot

./: README.md  accounts_to_scrape.txt  f1-tweet-generation.ipynb  parse.py  pyproject.toml  pyrightconfig.json  scrape.py
output/: tweets_1.txt  tweets_2.txt
