[tool.poetry]
name = "f1twtbot"
version = "0.1.0"
description = ""
authors = ["Arnav <arnav.jindal7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
twint = {git = "https://github.com/minamotorin/twint"}
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
